--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sze168" data-format="inline" data-related="false"></script>
-<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
