--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
+<script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
 <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sze168" data-format="inline" data-related="false"></script>
-<script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
 
 <h1>Hello-sze.com</h1>
