--- a/gate.html
+++ b/gate.html
@@ -30,6 +30,36 @@
 	right: 10px;
 }
 </style>
+<script type='text/javascript'>
+  var googletag = googletag || {};
+  googletag.cmd = googletag.cmd || [];
+  (function() {
+    var gads = document.createElement('script');
+    gads.async = true;
+    gads.type = 'text/javascript';
+    var useSSL = 'https:' == document.location.protocol;
+    gads.src = (useSSL ? 'https:' : 'http:') +
+      '//www.googletagservices.com/tag/js/gpt.js';
+    var node = document.getElementsByTagName('script')[0];
+    node.parentNode.insertBefore(gads, node);
+  })();
+</script>
+
+<script type='text/javascript'>
+  googletag.cmd.push(function() {
+    googletag.defineOutOfPageSlot('/4216/ami.radar', 'div-gpt-ad-1440646984494-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.pubads().setTargeting('test', ['on']);
+    googletag.enableServices();
+  });
+</script>
+
+<!-- /4216/ami.radar -->
+<div id='div-gpt-ad-1440646984494-0'>
+<script type='text/javascript'>
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1440646984494-0'); });
+</script>
+</div>
 <div id="fb-root"></div>
 <script>
  window.fbAsyncInit = function() {
