--- a/radar-page.html
+++ b/radar-page.html
@@ -176,8 +176,8 @@
     left: 0px;
     bottom: 0px;
     right: 0px;
-    height:434px;
-    width:829px;    
+    height:100%;
+    width:100%;    
     display:none;
 }
 #modal {
@@ -193,7 +193,7 @@
   margin: auto;
 }
 .fb_iframe_widget {
-	position: absolute;
+	position: absolute !important;
 	bottom: 32px;
 	right: 10px;
 }
