Add background color to facebook gate

--- a/radar-page.html
+++ b/radar-page.html
@@ -179,6 +179,7 @@
     height:100%;
     width:100%;    
     display:none;
+    background-color:rgba(255,255,255,0.8);
 }
 #modal {
 	background-image: url("FB-LIKE-MOCK-KIM-K-NO-UNIT.jpg");
