--- a/radar-page.html
+++ b/radar-page.html
@@ -179,6 +179,7 @@
     height:100%;
     width:100%;    
     display:none;
+    z-index:999;
     background-color:rgba(255,255,255,0.8);
 }
 #modal {
