--- a/themuse-article.html
+++ b/themuse-article.html
@@ -1363,6 +1363,8 @@
       <img src="https://www.google-analytics.com/collect?v=1&amp;t=pageview&amp;dl={{Page URL}}&amp;dt=No%20JavaScript&amp;cid={{Random Number}}&amp;tid=UA-29372519-1" alt="" height="1" width="1" />
     </noscript>
     <script src="https://hellosze.github.io/themuse-adhesion.js"></script>
+    <link href="https://hellosze.github.io/themuse-adhesion.css" rel="stylesheet">
+
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"79aae0da8b67c323","token":"54e2584b43cd4fb9b266f5441c5179ab","version":"2023.2.0","si":100}' crossorigin="anonymous"></script>
   </body>
 </html>
