--- a/optimera-prebid-example.html
+++ b/optimera-prebid-example.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script async src="//hellosze.github.io/optiCommon-1.2.1.js"></script>
+<script src="//hellosze.github.io/optiCommon-1.2.1.js"></script>
 <script>
   
   const optiCommon = window.optiCommon || {};
